feat: add notifications via telegram
